--- a/Integreat/Integreat/Base.lproj/Main.storyboard
+++ b/Integreat/Integreat/Base.lproj/Main.storyboard
@@ -188,16 +188,16 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2Ad-g4-Wyc">
-                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="deviceRGB"/>
                             </webView>
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="2Ad-g4-Wyc" firstAttribute="top" secondItem="dUD-c2-cGT" secondAttribute="bottom" id="MXK-bF-5mg"/>
                             <constraint firstItem="Qg8-Jq-URE" firstAttribute="top" secondItem="2Ad-g4-Wyc" secondAttribute="bottom" id="cr7-rY-Sx1"/>
                             <constraint firstItem="2Ad-g4-Wyc" firstAttribute="leading" secondItem="YdH-t2-daZ" secondAttribute="leading" id="d2W-SW-ZoF"/>
+                            <constraint firstItem="2Ad-g4-Wyc" firstAttribute="top" secondItem="YdH-t2-daZ" secondAttribute="top" id="kSm-jx-Bjd"/>
                             <constraint firstAttribute="trailing" secondItem="2Ad-g4-Wyc" secondAttribute="trailing" id="vog-h3-OTE"/>
                         </constraints>
                     </view>
