--- a/Integreat/Integreat/Base.lproj/Main.storyboard
+++ b/Integreat/Integreat/Base.lproj/Main.storyboard
@@ -1,42 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="m1L-GY-WDp">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="ZXe-q7-n39">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--Integreat-->
-        <scene sceneID="h1M-fG-4BE">
-            <objects>
-                <tableViewController id="g9U-wv-mhw" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="BFE-08-PEk">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <animations/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="bmA-5P-z2X">
-                                <rect key="frame" x="0.0" y="28" width="600" height="44"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="bmA-5P-z2X" id="YfK-Bz-5s3">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                    <animations/>
-                                </tableViewCellContentView>
-                                <animations/>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="g9U-wv-mhw" id="34S-82-sNB"/>
-                            <outlet property="delegate" destination="g9U-wv-mhw" id="DVc-Au-9wO"/>
-                        </connections>
-                    </tableView>
-                    <navigationItem key="navigationItem" title="Integreat" id="EGy-xE-6Vg"/>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Oyv-Qh-eOp" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1244" y="86"/>
-        </scene>
         <!--Cities-->
         <scene sceneID="Hlb-eN-7lQ">
             <objects>
@@ -107,7 +75,7 @@
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kwR-a3-TRa" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1118" y="1038"/>
+            <point key="canvasLocation" x="1694" y="1082"/>
         </scene>
         <!--Language-->
         <scene sceneID="U8i-DA-9il">
@@ -160,7 +128,6 @@
                                 <connections>
                                     <outlet property="cellImage" destination="nrK-rE-UxE" id="MU0-9F-ev9"/>
                                     <outlet property="cellTitle" destination="FP1-7L-bOu" id="rNE-aN-4V5"/>
-                                    <segue destination="3Ot-0T-awx" kind="show" identifier="pagesSeg" id="Axb-rq-V0m"/>
                                 </connections>
                             </collectionViewCell>
                         </cells>
@@ -173,7 +140,7 @@
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Xl5-Ku-4zD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1827" y="1032"/>
+            <point key="canvasLocation" x="2391" y="1082"/>
         </scene>
         <!--PageVC-->
         <scene sceneID="x5L-AK-Gds">
@@ -208,7 +175,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rTL-Yb-amu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3180" y="1032"/>
+            <point key="canvasLocation" x="1720" y="1860"/>
         </scene>
         <!--Pages-->
         <scene sceneID="7uL-E9-SwJ">
@@ -304,6 +271,11 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Pages" id="hSo-QK-vv4">
+                        <barButtonItem key="leftBarButtonItem" title="Change" id="HyV-iG-xYT">
+                            <connections>
+                                <segue destination="m1L-GY-WDp" kind="presentation" identifier="changeSeg" id="nhh-FB-JuW"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" systemItem="search" id="Gba-M1-D0M">
                             <connections>
                                 <action selector="searchPagesContent:" destination="3Ot-0T-awx" id="pVL-ed-86A"/>
@@ -312,11 +284,12 @@
                     </navigationItem>
                     <connections>
                         <outlet property="pagesSearchBar" destination="gKS-6g-Peg" id="Ktj-v4-198"/>
+                        <segue destination="m1L-GY-WDp" kind="presentation" identifier="changeSegWithoutAnimation" animates="NO" id="aNK-ph-JBq"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="V7d-hF-RGy" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2484" y="1032"/>
+            <point key="canvasLocation" x="944" y="1860"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="kXN-zm-aU7">
@@ -333,7 +306,26 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5kS-pg-OMD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="360" y="325"/>
+            <point key="canvasLocation" x="988" y="1089"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="APQ-4p-DUD">
+            <objects>
+                <navigationController id="ZXe-q7-n39" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="hwD-US-PtK">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="3Ot-0T-awx" kind="relationship" relationship="rootViewController" id="8eS-ut-kcA"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cu8-2v-zV8" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="176" y="1860"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="aNK-ph-JBq"/>
+    </inferredMetricsTieBreakers>
 </document>
