--- a/Integreat/Integreat/Base.lproj/Main.storyboard
+++ b/Integreat/Integreat/Base.lproj/Main.storyboard
@@ -210,7 +210,7 @@
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="5nx-mY-2Fs">
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="5nx-mY-2Fs">
                                             <rect key="frame" x="544" y="20" width="40" height="40"/>
                                             <animations/>
                                             <constraints>
